# file-system-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/file_system_assistant/: __init__.py
src/file_system_assistant/adapters/: __init__.py
src/file_system_assistant/adapters/console/: __init__.py
src/file_system_assistant/adapters/console/_in/: prompt_toolkit_console_in.py  std_console_in.py
src/file_system_assistant/adapters/dir_scanner/: std_dir_scanner.py
src/file_system_assistant/adapters/file_content_searcher/: std_file_content_search.py
src/file_system_assistant/adapters/file_io/: __init__.py  file_ext_type.py  file_io_factory.py
src/file_system_assistant/adapters/llms/: __init__.py  llm_factory.py
src/file_system_assistant/adapters/tools_registry/: __init__.py  basic_tool_registry.py
src/file_system_assistant/app/: cli.py
src/file_system_assistant/app/configs/: __init__.py  constants.py  file_system_assistant_prompt.py  register_tools.py  singleton.py
src/file_system_assistant/app/ports/: __init__.py  console_in.py  console_out.py
src/file_system_assistant/app/services/: __init__.py  bootstrap.py  container.py  file_system_assistant.py
src/file_system_assistant/app/utils/: __init__.py  get_prompt_text.py  select_llm_provider.py
src/file_system_assistant/core/ports/: __init__.py
src/file_system_assistant/core/tools/: __init__.py  dir_scanner_tool.py  file_content_searcher_tool.py  file_io_tool.py  tool_response.py
src/file_system_assistant/core/types/: __init__.py  optional.py  result.py
(+25 files in other folders)
